<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_home"
                android:checkable="true"/>
            <item
                android:id="@+id/nav_map"
                android:icon="@drawable/ic_navi_map"
                android:title="@string/menu_map" />
            <item
                android:id="@+id/nav_notification"
                android:icon="@android:drawable/ic_dialog_email"
                android:title="@string/menu_notification" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@android:drawable/ic_search_category_default"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@android:drawable/ic_delete"
                android:title="@string/menu_logout" />
    </group>
</menu>