<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/constraint_layout_fragment_home"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:id="@+id/linearLayout_fragment_home"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingTop="110dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        tools:ignore="MissingConstraints">
        <ImageView
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:background="@drawable/ic_linked_in"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp" />
        <EditText
            android:id="@+id/edittext_id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_id"
            android:inputType="textEmailSubject"
            android:padding="10dp" />
        <EditText
            android:id="@+id/edittext_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_password"
            android:inputType="textVisiblePassword"
            android:padding="10dp">
            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textview_forget_fragment_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="forgot Password..?" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_signin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@drawable/bin_button_login"
            android:text="@string/btn_login"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bin_button_login"
            android:text="@string/btn_register"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_login_facebook_fragment_home"
                android:layout_weight="0.5"
                android:text="Login wtih Facebook"
                android:layout_marginRight="10dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:background="@drawable/bin_button_facebook"
                android:layout_width="match_parent"
                android:onClick="selectFrag"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_login_google_fragment_home"
                android:layout_weight="0.5"
                android:text="Login with Google"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:background="@drawable/bin_button_google"
                android:onClick="selectFrag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/button_login_google_new"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_button_main_fragment_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="550dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@android:drawable/ic_input_add"
        tools:ignore="MissingConstraints" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_button_map_fragment_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="480dp"
        android:visibility="invisible"
        app:srcCompat="@android:drawable/ic_menu_mapmode"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_button_info_fragment_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="410dp"
        android:visibility="invisible"
        app:srcCompat="@android:drawable/ic_menu_info_details"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>